agent guide and prompt samples

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Diet AirDS – Prompts by Team</title>
+  <title>Diet AirDS – React Component Library</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -276,10 +276,10 @@
   <div class="py-large">
     <div class="card-text-pair mb-200">
       <h1 class="display600">Getting Started</h1>
-      <p class="labelRegular40 text-secondary">Prompt Library — Build with AI using real design tokens</p>
+      <p class="labelRegular40 text-secondary">React + TypeScript — 13 components, 10 team brands, light + dark</p>
     </div>
     <p class="bodyRegular30 text-primary doc-prose">
-      A pure CSS design system built for fast AI-assisted prototyping. Pick a team, copy the prompt, and paste it into Claude, ChatGPT, or any AI code generator. <a href="/documentation.html">See all tokens and components →</a>
+      A React/TypeScript component library for multi-team sports applications. Components are fully themed via CSS custom properties — set <code>data-theme</code> and <code>data-mode</code> on <code>&lt;html&gt;</code>, import from <code>diet-airds</code>, and build. Pick a team below to copy a ready-to-use AI prompt. <a href="/walkthrough.html">See all tokens and components →</a>
     </p>
   </div>
 
@@ -289,10 +289,7 @@
       <h2 class="title80">How to Use</h2>
     </div>
     <div class="doc-note">
-      <p class="bodyRegular30"><strong>1.</strong> Copy any prompt below.</p>
-      <p class="bodyRegular30 mt-50"><strong>2.</strong> Paste into an AI code generator (Claude, ChatGPT, etc.).</p>
-      <p class="bodyRegular30 mt-50"><strong>3.</strong> Replace <code>[Describe what you want to build]</code> with your component description.</p>
-      <p class="bodyRegular30 mt-50"><strong>Tip:</strong> Change <code>data-mode="light"</code> to <code>data-mode="dark"</code> for dark mode variants.</p>
+      <p class="bodyRegular30">Pick a team below, copy the prompt, replace <code>[Describe what you want to build]</code> with what you need, and paste into Claude, Cursor, or any AI code generator. The prompt handles everything else.</p>
     </div>
   </div>
 
@@ -306,12 +303,20 @@
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="wolves" and data-mode="dark"
+Set data-theme="wolves" and data-mode="dark" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -332,12 +337,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="lynx" and data-mode="light"
+Set data-theme="lynx" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -357,12 +370,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="courage" and data-mode="light"
+Set data-theme="courage" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -382,12 +403,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="summit" and data-mode="light"
+Set data-theme="summit" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -407,12 +436,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="bucknell" and data-mode="light"
+Set data-theme="bucknell" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -432,12 +469,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="sounders" and data-mode="light"
+Set data-theme="sounders" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -457,12 +502,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="reign" and data-mode="light"
+Set data-theme="reign" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -482,12 +535,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="ncfc" and data-mode="light"
+Set data-theme="ncfc" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -507,12 +568,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="jump" and data-mode="light"
+Set data-theme="jump" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -532,12 +601,20 @@ Always make sure you use the CSS files contained in the .md above. Only create c
         </div>
       </div>
       <div class="card-closed-body">
-        <code class="prompt-code">Build this using Diet AirDS:
+        <code class="prompt-code">Build this using Diet AirDS (React + TypeScript):
 https://diet-air-ds.vercel.app/agent-guide.md
 
-Use data-theme="athletics" and data-mode="light"
+Set data-theme="athletics" and data-mode="light" on &lt;html&gt;.
+Load all CSS files listed in the agent guide above (exact order matters).
 
-Always make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.
+Import components from 'diet-airds':
+import { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,
+         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,
+         Input, Select, Selector, Tile, Tag, Chip, Icon,
+         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'
+
+Components use typed variant props only — no className or style overrides.
+All design decisions must come from tokens in the agent guide.
 
 [Describe what you want to build]</code>
         <div class="mt-200">
@@ -549,7 +626,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
 
   <!-- Footer -->
   <div class="py-600 text-center">
-    <p class="labelRegular20 text-secondary">Diet AirDS – Prompt Library</p>
+    <p class="labelRegular20 text-secondary">Diet AirDS – React Component Library</p>
     <p class="labelRegular10 text-secondary mt-50">Switch themes and modes using the controls at the top of the page</p>
   </div>
 
@@ -585,7 +662,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
   sections.forEach(s => observer.observe(s));
 
   function copyPrompt(button, theme, mode) {
-    const promptText = `Build this using Diet AirDS:\nhttps://diet-air-ds.vercel.app/agent-guide.md\n\nUse data-theme="${theme}" and data-mode="${mode}"\n\nAlways make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.\n\n[Describe what you want to build]`;
+    const promptText = `Build this using Diet AirDS (React + TypeScript):\nhttps://diet-air-ds.vercel.app/agent-guide.md\n\nSet data-theme="${theme}" and data-mode="${mode}" on <html>.\nLoad all CSS files listed in the agent guide above (exact order matters).\n\nImport components from 'diet-airds':\nimport { Button, CircleButton, Card, CardClosed, CardOpen, CardSection,\n         ListRow, TextPair, TrailingText, LeadingImage, LeadingLogo,\n         Input, Select, Selector, Tile, Tag, Chip, Icon,\n         TopBar, Tabs, Steps, PageHeader, EventRow } from 'diet-airds'\n\nComponents use typed variant props only — no className or style overrides.\nAll design decisions must come from tokens in the agent guide.\n\n[Describe what you want to build]`;
 
     navigator.clipboard.writeText(promptText).then(() => {
       const originalText = button.textContent;
